Fix character biography h3 styling bleeding into content (#14747)

--- a/src/styles/actor/character/_biography.scss
+++ b/src/styles/actor/character/_biography.scss
@@ -126,7 +126,7 @@
         }
 
         .bio {
-            h3 {
+            > h3 {
                 @include p-reset;
                 background-color: rgba($text-dark-color, 0.1);
                 border: none;
